infra/modules/network/internet_gateway.tf
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name = "${local.app_id}-igw"
  }
}
